# chassis_haru_robo2024

./: CMakeLists.txt  README.md  manji.rviz  package.xml  図.pptx
calc_vel/: package.xml  setup.cfg  setup.py
calc_vel/calc_vel/: PI_controller_class.py  PI_param_setter.py  goal_tf_node.py  localize_node.py  param_control_node.py  pose_PI_controller.py  pose_PI_controller2.py  pose_PI_simulator.py  robot_tf_node.py  stl_marker_publisher.py
calc_vel/launch/: calc_vel.launch.xml  pose_PI_real.launch.py  pose_PI_simulate.launch.py  position_accuracy.launch.py  pure_pursuit.launch.py
calc_vel/mesh/: field.stl  robot.stl
calc_vel/rviz/: robot_tf.rviz
calc_vel/yaml/: pi_params.yaml
calc_wheel_vel/: CMakeLists.txt  package.xml
calc_wheel_vel/src/: calc_wheel_vel.cpp
lidar_transformation/: CMakeLists.txt  package.xml
lidar_transformation/launch/: lidar_all.launch.py
lidar_transformation/src/: laser_transformation.cpp  lidar_executor.cpp
localize/: CMakeLists.txt  package.xml
localize/launch/: emcl2_test.launch.py
localize/src/: emcl2_posestamped.cpp  lidar_with_trans.cpp  localize_node.cpp  mcl_pose_test.cpp  pose_rate_change.cpp  tf_to_posestamped.cpp
localize/yaml/: map_data.yaml
mesh/: robot.stl
odometry_calculator/: CMakeLists.txt  package.xml
odometry_calculator/src/: odometer_pub_sub.cpp  odometer_pub_sub.hpp  odometer_subscriber_main.cpp  odometry_class.cpp  odometry_class.hpp  odometry_node.cpp  odometry_publisher_main.cpp
path_server/: CMakeLists.txt  package.xml
path_server/msg/: OrientedPath.msg  PoseWithVel.msg  PoseWithVelStamped.msg
path_server_py/: package.xml  setup.cfg  setup.py
path_server_py/path_server_py/: path_server_node.py
pure_pursuit/: CMakeLists.txt  OUTLINE.md  package.xml  setup.py  めも.txt
pure_pursuit/action/: PathAndFeedback.action
pure_pursuit/bags/rosbag2_2024_01_22-18_23_29/: metadata.yaml  rosbag2_2024_01_22-18_23_29_0.db3
pure_pursuit/csv/: indices_and_commands.csv  indices_and_commands1.csv  indices_and_commands10.csv  indices_and_commands11.csv  indices_and_commands13.csv  indices_and_commands14.csv  indices_and_commands18.csv  indices_and_commands2.csv  indices_and_commands3.csv  indices_and_commands4.csv  indices_and_commands5.csv  indices_and_commands6.csv  indices_and_commands8.csv  indices_and_commands9.csv  path.csv  path1.csv  path10.csv  path11.csv  path12.csv  path13.csv  path14.csv  path15.csv  path16.csv  path17.csv  path18.csv  path19.csv  path2.csv  path20.csv  path3.csv  path4.csv  path5.csv  path6.csv  path7.csv  path8.csv  path9.csv
pure_pursuit/launch/: pure_pursuit.launch.py  robot_tf.launch.py  sim_environment.launch.py
pure_pursuit/msg/: Path2DWithAngles.msg  Path2DWithParams.msg  Path2DWithSpeed.msg  PointAndAngle.msg  Pose2DWithParams.msg  Pose2DWithSpeed.msg
pure_pursuit/pure_pursuit/: PI_controller_class.py  action_client.py  calc_wheel_vel.py  debug_vel.py  indices_and_commands.csv  mecha_actions_class.py  mecha_state_publisher.py  param_controller.py  path.csv  path_generator.ipynb  path_generator_funcs.py  path_generator_node.py  path_server.py  path_server_node.py  pure_pursuit_PI.py  pure_pursuit_class.py  pure_pursuit_node.py  pure_pursuit_test.ipynb  robot_manual_controller.py  robot_master_node.py  robot_path_view.py  twist_to_twiststamped.py  twist_visualizer.py
pure_pursuit/rviz/: robot_sim.rviz  robot_tf.rviz
pure_pursuit/scripts/: keyboard_2_test.py  keyboard_input_test.py
pure_pursuit/src/: pure_pursuit_node.cpp
pure_pursuit/srv/: GetPath.srv
pure_pursuit/yaml/: path_params.yaml
robot_param_identifier/: package.xml  setup.cfg  setup.py
robot_param_identifier/robot_param_identifier/: robot_param_identifier.py
rosbag2_2023_12_16-17_06_35/: metadata.yaml  rosbag2_2023_12_16-17_06_35_0.db3
rviz/: robot_tf.rviz
src/: odometer_pub_sub.cpp  odometer_pub_sub.hpp  odometer_subscriber.cpp  odometer_subscriber.hpp  odometry_class.cpp  odometry_class.hpp  odometry_node.cpp  odometry_publisher.cpp  odometry_publisher.hpp
urdf/: field.urdf
yaml/: pi_params.yaml
